nginx/nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
      - containerPort: 80
